@@ -1,15 +1,15 @@
 package com.praticas.dslist.services;
 
-import com.praticas.dslist.dto.GameMinDTO;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import java.util.stream.Collectors;
+
 
 import com.praticas.dslist.repositories.GameListRepository;
 import com.praticas.dslist.dto.GameListDTO;
-import com.praticas.dslist.entities.GameList;
 import java.util.List;
-
+import com.praticas.dslist.entities.GameList;
 @Service
 public class GameListService {
 
@@ -19,7 +19,6 @@ public class GameListService {
     @Transactional(readOnly = true)
     public List<GameListDTO> findAll() {
         List<GameList> result = gameListRepository.findAll();
-        return result.stream().map(GameListDTO::new).toList();
-        //List<GameListDTO> dto = result.stream().map(x -> new GameListDTO(x)).toList();
-    }
+        List<GameListDTO> list = result.stream().map(GameListDTO::new).collect(Collectors.toList());
+    return list;}
 }
