@@ -3,10 +3,13 @@ package com.praticas.dslist.services;
 import com.praticas.dslist.dto.GameDTO;
 import com.praticas.dslist.dto.GameMinDTO;
 import com.praticas.dslist.entities.Game;
+import com.praticas.dslist.projections.GameMinProjection;
 import com.praticas.dslist.repositories.GameRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import java.util.stream.Collectors;
+
 
 import java.util.List;
 
@@ -25,7 +28,14 @@ public class GameService {
     @Transactional(readOnly = true)
     public List<GameMinDTO> findAll() {
         List<Game> result = gameRepository.findAll();
-        List<GameMinDTO> dto = result.stream().map(x -> new GameMinDTO(x)).toList();
+        List<GameMinDTO> dto = result.stream().map(x -> new GameMinDTO(x)).collect(Collectors.toList());
         return dto;
     }
+
+    @Transactional(readOnly = true)
+    public List<GameMinDTO> findByGameList(Long listId) {
+        List<GameMinProjection> games = gameRepository.searchByList(listId);
+        return games.stream().map(x -> new GameMinDTO(x)).collect(Collectors.toList());
+    }
+
 }
